# parkjack-nanobanana-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: smoke_mock.py
src/nanobanana_mcp/: __init__.py  __main__.py  server.py
