[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parkjack-nanobanana-mcp"
version = "0.1.0"
description = "MCP wrapper for Google's Nano Banana image generation models"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["mcp", "gemini", "nano-banana", "image-generation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.27,<1.0",
  "mcp[cli]>=1.26.0,<2.0",
]

[project.scripts]
parkjack-nanobanana-mcp = "nanobanana_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
